# routes/workouts.js
@@ -3,17 +3,18 @@ const controller = require("../controllers/workouts")
 const {workoutValidation} = require("../validator/validate")
 const { requiresAuth } = require('express-openid-connect');
 
-const swaggerUi = require('swagger-ui-express');
-const swaggerDocument = require('./swagger.json');
+// const swaggerUi = require('swagger-ui-express');
+// const swaggerDocument = require('./swagger.json');
+const { validationResult } = require("express-validator");
 
-routes.use('/api-docs', swaggerUi.serve);
-routes.get('/api-docs', swaggerUi.setup(swaggerDocument));
+// routes.use('/api-docs', swaggerUi.serve);
+// routes.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
 routes.get("/",requiresAuth(), controller.getAll)
 
 routes.get("/:id", controller.getSingle)
 
-routes.post("/", requiresAuth(), controller.addWorkout)
+routes.post("/", requiresAuth(), validationResult, controller.addWorkout)
 
 routes.put("/:id", workoutValidation, controller.updateWorkout)
 
