# server.js
@@ -6,6 +6,8 @@ const port = process.env.PORT || 3000
 const bodyparser = require("body-parser")
 const mongodb = require("./databases/connect")
 const { auth } = require('express-openid-connect');
+const swaggerUi = require('swagger-ui-express');
+const swaggerDocument = require('./routes/swagger.json');
 
 const config = {
 	authRequired: false,
@@ -16,16 +18,15 @@ const config = {
 	issuerBaseURL: process.env.issuerBaseURL
   };
 
+app.use('/api-docs', swaggerUi.serve);
+app.get('/api-docs', swaggerUi.setup(swaggerDocument));
 app.use(auth(config));
-app.use("/", require("./routes"))
+// app.use("/", require("./routes"))
 app.use(bodyparser.json())
 app.use("/workouts", require("./routes/workouts"))
+app.use("/meals", require('./routes/meals'))
 app.use("/auth", require("./routes/auth"))
 
-
-app.get('/', (req, res) => {
-	res.send(req.oidc.isAuthenticated() ? 'Logged in' : 'Logged out');
-  });
 
 mongodb.initDb((err, mongodb) => {
 	if (err) {
